# FoxyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Foxy/: CMakeLists.txt
Foxy/src/Foxy/: Application.cpp  Application.h  DeviceManager.cpp  DeviceManager.h  EntryPoint.h  log.h
FoxyApp/: CMakeLists.txt
FoxyApp/src/: main.cpp
